fixed notifications and aligncenter css

--- a/honeydew/app/assets/stylesheets/application.css
+++ b/honeydew/app/assets/stylesheets/application.css
@@ -66,7 +66,7 @@
     font-size: 18px;
 }
 
-//Tagging in Task/index
+/*Tagging in Taskindex */
 .tag_cloud{
 position: absolute;
 background-color: rgba(255,255,255,.7);
@@ -1157,9 +1157,6 @@ input:focus {
     top:0px;
     left:0px;
     z-index: 99999;
-    -webkit-box-shadow: 0px 10px 24px -8px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 10px 24px -8px rgba(0,0,0,0.75);
-    box-shadow: 0px 10px 24px -8px rgba(0,0,0,0.75);
 }
 .ns-effect-thumbslider.ns-hide .ns-content {
     -webkit-animation-direction: reverse;
@@ -1181,13 +1178,13 @@ input:focus {
     background: rgba(255,255,255,.98);
     color: #727275;
     font-weight: bold;
-    padding-right: 100px;
+    padding-right: 20px;
     padding-top:5px;
     height: 64px;
     line-height: 60px;
     position:fixed;
-    top:0px;
-    left:70px;
+    top:0;
+    left:0;
     width:100%;
     z-index: 9999999;
     text-align: center;
@@ -2308,7 +2305,7 @@ label.message{
     height: 3em;
     background-color: rgba(255,255,255,.9);
 }
-.aligncenter {
+.aligncenterbtn {
     position:relative;
     left:50%;
 }
